[package]
name = "hyperloop"
version = "0.1.0"
authors = ["Eivind Alexander Bergem <eivind.bergem@gmail.com>"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
futures = {version = "0.3.30", default-features = false}
pinned-aliasable = "0.1.3"
fugit = { version = "0.3.7", features = ["defmt"], optional = true}
cortex-m = {version = "0.7.7", optional = true}
defmt = "0.3.8"
crossbeam-utils = { version = "0.8.20", default-features = false, features = ["loom"] }

[features]
default = ["cortex-m", "nightly", "macros"]
cortex-m = ["dep:cortex-m", "fugit"]
std = []
nightly = []
macros = ["hyperloop-macros"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.hyperloop-macros]
path = "../hyperloop-macros"
optional = true

[dev-dependencies]
crossbeam-queue = "0.3.11"

[target.'cfg(loom)'.dependencies]
loom =  "0.7"
