[package]
name = "stm32f103"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
fugit = { version = "0.3.7", features = ["defmt"] }
hyperloop = {path = "../../hyperloop"}
panic-probe = { version = "0.3.2", features = ["defmt", "print-defmt"] }
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103"] }
